# MySqlC-Conn

./: CMakeLists.txt  DbConnection.h  Instructions.txt  MysqlConnection.cpp  MysqlConnection.h  main.cpp
SQLAPI/bcc-cbxe4/lib/: sqlapibs.lib  sqlapibsd.lib  sqlapibu.lib  sqlapibus.lib  sqlapibusd.lib
SQLAPI/bcc-cbxe5/lib/: sqlapib.lib  sqlapibd.lib  sqlapibs.lib  sqlapibsd.lib  sqlapibus.lib  sqlapibusd.lib
SQLAPI/bcc-cbxe6/lib/: sqlapibs.lib  sqlapibsd.lib  sqlapibud.lib  sqlapibus.lib  sqlapibusd.lib
SQLAPI/bcc-cbxe7/lib/: sqlapib.lib  sqlapibs.lib  sqlapibsd.lib  sqlapibu.lib  sqlapibud.lib  sqlapibus.lib  sqlapibusd.lib
SQLAPI/bcc-cbxe8/lib/: sqlapibd.lib  sqlapibs.lib  sqlapibsd.lib  sqlapibus.lib  sqlapibusd.lib
SQLAPI/lib/: sqlapi.lib  sqlapib.lib  sqlapibd.lib  sqlapibs.LIB  sqlapibsd.LIB  sqlapibus.LIB  sqlapibusd.LIB  sqlapid.lib  sqlapis.lib  sqlapisd.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib  sqlapiusd.lib
SQLAPI/vs2005/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
SQLAPI/vs2008/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
SQLAPI/vs2010/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
SQLAPI/vs2012/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
SQLAPI/vs2013/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
SQLAPI/vs2017/lib/: sqlapi.lib  sqlapid.lib  sqlapis.lib  sqlapiu.lib  sqlapiud.lib  sqlapius.lib
SQLAPI/vs2019/lib/: sqlapi.lib  sqlapid.lib  (+4 more)
(+33 files in other folders)
